--- a/README.adoc
+++ b/README.adoc
@@ -1,2 +1,3 @@
 = demo-static-website
-A demonstration static website
+
+A demonstration static website that can be published automatically to a static site host.
